<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.gmail.dev.hartmann.valentin.splitthebill.AboutActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/size_launcher_icon_about"
                android:layout_height="@dimen/size_launcher_icon_about"
                android:layout_margin="@dimen/margin_launcher_icon_about"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_below_icon_headline"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_text_list_entry">

            <TextView
                android:id="@+id/textView7"
                style="@style/TextViewAboutListEntry"
                android:text="@string/author_capitalized_colon" />

            <TextView
                android:id="@+id/textView_valentin"
                style="@style/TextViewAboutLink"
                android:text="@string/valentin_hartmann" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_text_list_entry">

            <TextView
                android:id="@+id/textView9"
                style="@style/TextViewAboutListEntry"
                android:text="@string/feedback_question" />

            <TextView
                android:id="@+id/textView_contact"
                style="@style/TextViewAboutLink"
                android:text="@string/contact_me_exclamation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_text_list_entry">

            <TextView
                android:id="@+id/textView11"
                style="@style/TextViewAboutListEntry"
                android:text="@string/like_app_question" />

            <TextView
                android:id="@+id/textView_rate"
                style="@style/TextViewAboutLink"
                android:text="@string/rate_it_exclamation" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
