<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    tools:context="com.gmail.dev.hartmann.valentin.splitthebill.AddPayerEvenDialogFragment">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dialog_below_message"
        android:measureWithLargestChild="false">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_between_textView_editText"
                android:text="@string/payer_name_capitalized"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_payer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_between_table_rows">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_between_textView_editText"
                android:text="@string/payer_already_paid_capitalized"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_paid_amount_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="right"
                    android:hint="@string/zero_hint"
                    android:inputType="number"
                    android:maxLength="7" />

                <TextView
                    android:id="@+id/textView_decimal_separator_paid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editText_paid_amount_first"
                    android:layout_alignBottom="@+id/editText_paid_amount_first"
                    android:layout_toEndOf="@+id/editText_paid_amount_first"
                    android:layout_toRightOf="@+id/editText_paid_amount_first"
                    android:text="."
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editText_paid_amount_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/textView_decimal_separator_paid"
                    android:layout_toRightOf="@+id/textView_decimal_separator_paid"
                    android:hint="@string/double_zero"
                    android:inputType="number"
                    android:maxLength="2" />

                <TextView
                    android:id="@+id/textView_currency_symbol_paid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editText_paid_amount_second"
                    android:layout_alignBottom="@+id/editText_paid_amount_second"
                    android:layout_toEndOf="@+id/editText_paid_amount_second"
                    android:layout_toRightOf="@+id/editText_paid_amount_second"
                    android:text="$"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
